Add annotation generator

--- a/example_usage/build.yaml
+++ b/example_usage/build.yaml
@@ -4,3 +4,21 @@ targets:
       dart_codegen_example|test:
         generate_for:
           - lib/library_source.dart
+
+      dart_codegen_example|test_shared:
+        generate_for:
+          - lib/*.dart
+
+      dart_codegen_example|test_shared_part_2:
+        generate_for:
+          - lib/*.dart
+      
+      dart_codegen_example|test_shared_part_3:
+        generate_for:
+          - lib/library_source.dart
+
+      # source_gen|combining_builder:
+      #   options:
+      #     ignore_for_file:
+      #     - lint_a
+      #     - lint_b
