--- a/example_usage/pubspec.yaml
+++ b/example_usage/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   dart_codegen_example:
     path: ../example
+  source_gen: ^1.5.0
 
 dev_dependencies:
   build_runner: ^2.0.0
